# cars_agregator_bot

./: .gitignore  pyproject.toml
app/: auth_yoomoney.py  config.py  main.py  setup_userbot.py  template.env
app/bot/: setup.py
app/bot/handlers/user/: __init__.py  save_user_filters.py  start.py
app/bot/handlers/user/subscription/: __init__.py  buy.py
app/bot/middlewares/: __init__.py  is_user_saved.py
app/bot/states/: __init__.py  admin.py  user.py
app/filters/: is_admin.py
app/handlers/: __init__.py
app/handlers/user/: start.py
app/middlewares/: __init__.py
app/models/: __init__.py  operation.py  user.py  user_filters.py  yoomoney_operation.py
app/services/ai/: ai_connector.py
app/services/ai/implementations/: chatgpt.py
app/services/database/: dao.py
app/services/database/implementations/: orm_models.py  postgres.py
app/services/wallet/: wallet_api.py
app/services/wallet/implementations/: yoomoney.py
app/states/: __init__.py  user.py
app/userbot/: setup.py
app/userbot/handlers/: __init__.py  channel_post.py
app/utils/: end_subscriptions.py  logger.py  posts_processing.py  process_posts.py  process_user_settings.py
app/web/: __init__.py  webapp.py
