[tool.poetry]
name = "agregator-auto"
version = "0.1.0"
description = ""
authors = ["Svyatoslav <hedgehogdevelop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
aiogram-dialog = "^2.1.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
openai = "^1.23.2"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
pyrogram = "^2.0.106"
apscheduler = "^3.10.4"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
